another fix on mobile survery submit button

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -167,6 +167,8 @@ div input[type=submit] {
   min-width: 85px;
   padding: 0 9px;
   display: block;
+  cursor: pointer;
+  height: 100%;
   &:hover {
     background: #f6f6f6;
   }
